[bug] Fix alignment of nav bar elements

--- a/vicflora-nuxt/components/Banner/Banner.scss
+++ b/vicflora-nuxt/components/Banner/Banner.scss
@@ -39,6 +39,7 @@
       font-family: goodsans-thin;
       font-size: 20px;
       letter-spacing: -1px;
+      color: $black;
     }
   }
 }
